<resources>
    <string name="app_name">New Union Demo</string>
    <string name="sample_text">Sample Text</string>

    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="login">Login</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>

    <string name="hint_organization_name">Organization name</string>
    <string name="hint_organization_pincode">Pincode</string>
    <string name="hint_organization_address">Address</string>
    <string name="hint_organization_country">Country</string>
    <string name="hint_organization_state">State</string>
    <string name="hint_organization_city">City</string>

    <string name="msg_firebase_auth_failed">Authentication failed</string>
</resources>
